--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode/
+
 # Binaries for programs and plugins
 *.exe
 *.dll
@@ -12,6 +14,9 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# Dep dependencies
+vendor/
 
 .idea/
 *.exe
