--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,16 +19,12 @@
   version = "1.9.0"
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/savsgio/fasthttpsession"
-
-[[constraint]]
   name = "github.com/satori/go.uuid"
   version = "1.2.0"
 
 [[constraint]]
   name = "github.com/valyala/fasthttp"
-  branch = "master"
+  version = "20180529.0.0"
 
 [prune]
   go-tests = true
